datasets/dataset_txt/mitmproxy/mitmproxy_925.txt
ximerus commented on 11 Oct 2016
Hi, guys. After update to macOS 10.12 mitmproxy don't work with anyone params or without params.
Here is traceback:
$ mitmproxy   

Traceback (most recent call last):
  File "/usr/local/bin/mitmproxy", line 11, in <module>
    sys.exit(mitmproxy())
  File "/Library/Python/2.7/site-packages/mitmproxy/main.py", line 45, in mitmproxy
    from . import console
  File "/Library/Python/2.7/site-packages/mitmproxy/console/__init__.py", line 19, in <module>
    from .. import controller, flow, script, contentviews
  File "/Library/Python/2.7/site-packages/mitmproxy/flow.py", line 21, in <module>
    from .onboarding import app
  File "/Library/Python/2.7/site-packages/mitmproxy/onboarding/app.py", line 3, in <module>
    import tornado.web
  File "/Library/Python/2.7/site-packages/tornado/web.py", line 84, in <module>
    from tornado import gen
  File "/Library/Python/2.7/site-packages/tornado/gen.py", line 1236, in <module>
    import tornado.platform.asyncio
  File "/Library/Python/2.7/site-packages/tornado/platform/asyncio.py", line 33, in <module>
    import asyncio
  File "/Library/Python/2.7/site-packages/asyncio/__init__.py", line 9, in <module>
    from . import selectors
  File "/Library/Python/2.7/site-packages/asyncio/selectors.py", line 39
    "{!r}".format(fileobj)) from None
                               ^
SyntaxError: invalid syntax